comment overflow issues [marked for review: 387]

--- a/www/assets/styles/general.less
+++ b/www/assets/styles/general.less
@@ -496,6 +496,7 @@ input[type=checkbox]{
             background:#eee;
             margin-bottom:10px;
             padding:10px 10px 10px 50px;
+            overflow:hidden;
             .user-avatar {
 				width:32px; height:32px;
                 position:absolute; 
